--- a/Exercise 25 (Day26)/z4/MainWindow.xaml
+++ b/Exercise 25 (Day26)/z4/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="z1.MainWindow"
+﻿<Window x:Class="z3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:z1"
+        xmlns:local="clr-namespace:z3"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid >
+        <Canvas x:Name="c">
+            <Button PreviewMouseMove="Button_PreviewMouseMove" Width="100" Height="20" Click="Button_Click" Canvas.Left="350" Canvas.Top="217"/>
+        </Canvas>
     </Grid>
 </Window>
